--- a/ipu/templates/403.html
+++ b/ipu/templates/403.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>404</title>
+	<title>403</title>
 	<link type="text/css" rel="stylesheet" href="{% static 'common/css/font-awesome/css/font-awesome.min.css' %}" />
 </head>
 
@@ -19,6 +19,7 @@
 		justify-content: flex-start;
 		align-items: center;
 		width: 40%;
+		margin-left: 7%;
 
 	}
 	#error h2
@@ -34,16 +35,15 @@
 		justify-content: center;
 		align-items: center;
 	}
-
 	#home-icon
 	{
-		color: #800000;
+		color: #171769;
 	}
 
 	#home-icon:hover
 	{
 		cursor: pointer;
-		color: #000099;
+		color: red;
 	}
 	@media (min-width:300px) and (orientation: portrait){
 		body{
@@ -57,16 +57,16 @@
 </style>
 <body>
 
-<img src="{% static 'images/engineer.gif' %}">
+<img src="{% static 'images/foot.jpg' %}" height="45%" width="45%">
 
 <div id="error">
 	<div id="error-head">
-		<h2 style="color: #800000;">404 : Page Not Found</h2>
+		<h2 style="color: #171769;">403 : Permission Denied</h2>
 	</div>
 
 	<div id="error-body">
 		<p style="font-size: 20px;">
-			Sorry but the page you are looking for cannot be found.<br><br> If must have stopped under construction or forgotton about completely. You can still go back to your home by clicking the icon below.
+			Sorry but you are not allowed to access this page.<br><br> If you actually had permission you wouldn't be here. You can still go back to your home by clicking the icon below.
 		</p>
 		<a id="home-icon" href="{% url 'home' %}"><i class="fa fa-home fa-4x" aria-hidden="true"></i></a>
 	</div>
