--- a/ipu/templates/account/landing.html
+++ b/ipu/templates/account/landing.html
@@ -33,7 +33,8 @@
 </div>
                   
  <img id="icon-college" src="{% static 'account/images/ipu-logo.png' %}">
-     <div class="parallax-container">
+    
+   <div class="parallax-container">
     <div class="parallax" id="img-first">
     	<div class="row container" id="first-bo">
     	    
@@ -68,11 +69,12 @@
             <div class="team-member">
               <img class="circle responsive-img" src="{% static 'account/images/team/bob.jpg' %}">
               <h5>Pratulya Bubna</h5>
-              <div id="icons">
+              <div id="icons" class="hide-on-small-only">
               	<i class="fa fa-google-plus-square fa-2x" aria-hidden="true" style="color: #dd4b39;"></i>
               	<i class="fa fa-facebook-square fa-2x" aria-hidden="true" style="color: #3B5998;"></i>
               	<i class="fa fa-linkedin-square fa-2x" aria-hidden="true" style="color: #4875B4;"></i>
              </div>
+
             </div>
             <div class="team-member">
               <img class="circle responsive-img" src="{% static 'account/images/team/rajjo.jpg' %}">
