--- a/ipu/templates/account/nav-landing.html
+++ b/ipu/templates/account/nav-landing.html
@@ -16,7 +16,12 @@
       <div class="nav-wrapper">
         <a href="#!" class="brand-logo center hide-on-med-and-down">Training & Placement Cell</a>
         <a href="#!" class="brand-logo left hide-on-large-only">Training & Placement Cell</a>
-        <ul class="left">
+        <ul class="left hide-on-large-only" style="margin-left: 600px;">
+          <li><a href="{% url 'landing' %}"><i class="fa fa-arrow-left fa-3x" aria-hidden="true"></i>
+            </a>
+          </li>
+        </ul>
+        <ul class="left hide-on-med-and-down">
           <li><a href="{% url 'landing' %}"><i class="fa fa-arrow-left fa-2x" aria-hidden="true"></i>
             </a>
           </li>
