--- a/ipu/templates/account/procedures.html
+++ b/ipu/templates/account/procedures.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block main %}
-  <div id="main-box">
+  <div id="main-box" style="margin-top: 50px;">
    <h4>Placement Process</h4>
     <ol id="steps">
       <li class="step">
