--- a/ipu/templates/400.html
+++ b/ipu/templates/400.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>404</title>
+	<title>400</title>
 	<link type="text/css" rel="stylesheet" href="{% static 'common/css/font-awesome/css/font-awesome.min.css' %}" />
 </head>
 
@@ -10,6 +10,7 @@
 	body
 	{
 		padding: 50px;
+		padding-top: 100px;
 		display: flex;
 	}
 	#error
@@ -25,6 +26,7 @@
 	{
 		font-size: 45px;
 		font-family: "Times New Roman";
+		margin-bottom: 25px;
 	}
 
 	#error-body
@@ -34,16 +36,15 @@
 		justify-content: center;
 		align-items: center;
 	}
-
 	#home-icon
 	{
-		color: #800000;
+		color: #9c4e16;
 	}
 
 	#home-icon:hover
 	{
 		cursor: pointer;
-		color: #000099;
+		color: #ff4da6;
 	}
 	@media (min-width:300px) and (orientation: portrait){
 		body{
@@ -57,16 +58,16 @@
 </style>
 <body>
 
-<img src="{% static 'images/engineer.gif' %}">
+<img src="{% static 'images/bear.gif' %}" height="50%" width="50%">
 
 <div id="error">
 	<div id="error-head">
-		<h2 style="color: #800000;">404 : Page Not Found</h2>
+		<h2 style="color: #9c4e16;">400 : Bad Request</h2>
 	</div>
 
 	<div id="error-body">
 		<p style="font-size: 20px;">
-			Sorry but the page you are looking for cannot be found.<br><br> If must have stopped under construction or forgotton about completely. You can still go back to your home by clicking the icon below.
+			Your browser sent a request our server could not understand.<br><br> The server might be a machine but it is still human made. You can still go back to your home by clicking the icon below.
 		</p>
 		<a id="home-icon" href="{% url 'home' %}"><i class="fa fa-home fa-4x" aria-hidden="true"></i></a>
 	</div>
